# pywrap

./: .clang-format  CMakeLists.txt  LICENSE.md  Pywrap.cpp  Pywrap.h  README.md  Util.h
include/pywrap/: Consumer.h  FrontendAction.h  MatchHandler.h  Printer.h  Pywrap.h  Util.h
include/pywrap/binding/: Binding.h  CXXRecord.h  ClassGetitem.h  Compare.h  Destructor.h  Enum.h  Field.h  Function.h  Init.h  Method.h  Module.h  Specialization.h  Tag.h  TypeObject.h  Wrapper.h
src/: Consumer.cpp  FrontendAction.cpp  MatchHandler.cpp  Printer.cpp  Pywrap.cpp  Util.cpp
src/binding/: Binding.cpp  CXXRecord.cpp  ClassGetitem.cpp  Compare.cpp  Destructor.cpp  Enum.cpp  Field.cpp  Function.cpp  Init.cpp  Method.cpp  Module.cpp  Specialization.cpp  Tag.cpp  TypeObject.cpp  Wrapper.cpp
